<resources>
    <string name="app_name">BruxellesParcourBD</string>


    <string name="acceuil_fragment">Bienvenu dans le jeu pour découvrir l\'univers de la BD en s\'amusant.</string>
    <string name="new_user_fragment">Ajouter un nouvel Utiliseur</string>
    <string name="user_fragment">Bonjour %s que voulez vous faire?</string>
    <string name="parcours_fragment">Quel parcours voulez vous choisir?</string>
    <string name="db_fragment">Bienvenu dans la base de données que voulez vous faire</string>
    <string name="parcours_choice_fragment">Bienvenu dans le parcourt numéro %i</string>
    <string name="database_update_fragment">Bonjour, voulez vous changer vos informations:</string>
    <string name="database_info_fragment">Bonjour, voici vos informations: </string>
    <string name="parcours_map_fragment">Voici la carte général du parcourt</string>
    <string name="parcours_list_fresque">voici la liste des fresques que vous aller trouver dans le parcourt</string>
    <string name="tv_play_introduction">C\'est parti!</string>

    <string name="et_userName_example">jvblinc182@hotmail.com</string>

    <string name="tv_user_name">User Name</string>
    <string name="tv_password">Mot de Passe</string>
    <string name="tv_Last_name">Nom</string>
    <string name="tv_First_name">Prenom</string>
    <string name="tv_email">Email</string>
    <string name="tv_confrimPassword">Mot de passe</string>

    <string name="tv_titre_freque">Titre</string>
    <string name="tv_auteur_fresque">Auteur</string>
    <string name="tv_annee_fresque">Annee</string>
    <string name="tv_fresque_image">Image</string>
    <string name="tv_fresque_latitude">latitude</string>
    <string name="tv_fresque_longitude">longitude</string>

    <string name="tv_endGame">bravo vous avez fini le parcours!!</string>

    <string name="btn_connexion">Connexion</string>
    <string name="btn_nouvel_utilisateur">Nouvel Utilisateur</string>
    <string name="btn_confirm_information">confirmer</string>
    <string name="btn_continue">continuer</string>

    <string name="btn_user_choice_choix_parcours">Choisir un parcours</string>
    <string name="btn_user_choice_accès_db">Accèder à la base de donnée</string>
    <string name="btn_user_choice_parcours_general">Accèder au parcours générale</string>

    <string name="btn_user_db_stat">voir les statistiques</string>
    <string name="btn_user_db_parcours_deja_parcouru">accèder au parcours déjà effectués</string>
    <string name="btn_user_db_retour">retour</string>

    <string name="btn_user_parcours_1">Parcours numéro 1</string>
    <string name="btn_user_parcours_2">Parcours numéro 2</string>
    <string name="btn_user_parcours_3">Parcours numéro 3</string>
    <string name="btn_user_parcours_4">Parcours numéro 4</string>
    <string name="btn_user_parcours_5">Parcours numéro 5</string>

    <string name="btn_update_information">update information</string>

    <string name="btn_parcours_carte">afficher la carte du parcours</string>
    <string name="btn_parcours_liste">liste des fresques du parcours</string>
    <string name="btn_parcours_choose">choisir ce parcours</string>

    <string name="btn_play_passer_fresque">passer suivante</string>
    <string name="btn_play_fresque_Arriver">arriver Fresque</string>
    <string name="btn_play_fresqueSuivante">fresque suivante</string>
    <string name="btn_play_show_map">voir la carte </string>

    <string name="btn_parcours_retour">retour</string>

    <string name="tv_game_result_frag_bravo">Bravo vous avez atteint la Fersque! Vous êtes trop fort! bien joué</string>
    <string name="tv_game_result_frag_perdu">Bien essayé mais vous n\'avez pas atteilt la fresque! dommage...</string>
    <string name="btn_end_game_act_retrun_util">retour à l\'écran d\'acceuil</string>

    <string name="parcours_list_fresque_view">retour</string>

    <string name="toast_not_same_password">les deux mots de passe ne correspondent pas veuillez inserer deux fois le même mot de passe</string>
    <string name="toast_parcours_choisis">le parcours à bien été sélectionner</string>
    <string name="toast_image_chargement">l\'image à été corerectement chargée</string>
    <string name="toast_parcours_charger">"le parcours a été correctemenet chargé"</string>

    <string name="firebase_auth_failed">connexion a échoué veillez réessayer plus tard!</string>

    <string name="firebase_auth_creation_succeed">création d\'un nouvel utilisateur réussie</string>
    <string name="firebase_auth_succeed">connexion réussie!</string>
    <string name="FireBaseVerification_email_sent">Email envoyé</string>
    <string name="FireBasefailed_verification_email_sending">Email non envoyé</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">BdParcours User: %s</string>
    <string name="signed_out">Signed Out</string>
    <string name="required_field">Required field</string>

    <string name="position">votre position est maintenant connue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
