<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.formation.appli.bruxellesparcourbd.ui.User.ParcoursUserFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/LinearLayoutFrame">

            <TextView
                android:text="@string/db_fragment"
                style="@style/textViewTextFrame"/>

            <Button
                android:id="@+id/btn_user_parcours_1"
                android:text="@string/btn_user_parcours_1"
                style="@style/Button2" />

            <Button
                android:id="@+id/btn_user_parcours_2"
                android:text="@string/btn_user_parcours_2"
                style="@style/Button2" />

            <Button
                android:id="@+id/btn_user_parcours_3"
                android:text="@string/btn_user_parcours_3"
                style="@style/Button2" />

            <Button
                android:id="@+id/btn_user_parcours_4"
                android:text="@string/btn_user_parcours_4"
                style="@style/Button2" />

            <Button
                android:id="@+id/btn_user_parcours_5"
                android:text="@string/btn_user_parcours_5"
                style="@style/Button2" />
        </LinearLayout>

    </ScrollView>

</FrameLayout>
