<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.formation.appli.bruxellesparcourbd.ui.main.FormulaireMainFragment">
    <LinearLayout
        style="@style/LinearLayoutFrame">

        <TextView
            style="@style/textViewTextFrame"
            android:text="@string/new_user_fragment"/>

        <LinearLayout
            style="@style/LinearLayoutuserInput">

            <TextView
                style="@style/textViewTextFrameMiddle"
                android:text="@string/tv_Last_name"/>
            <EditText
                android:id="@+id/et_formulaire_Last_name"
                style="@style/edithTextFrameMiddle" />

        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutuserInput">

            <TextView
                style="@style/textViewTextFrameMiddle"
                android:text="@string/tv_First_name"/>
            <EditText
                android:id="@+id/et_formulaire_first_name"
                style="@style/edithTextFrameMiddle" />

        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutuserInput">

            <TextView
                style="@style/textViewTextFrameMiddle"
                android:text="@string/tv_user_name"/>
            <EditText
                android:id="@+id/et_formulaire_user_name"
                style="@style/edithTextFrameMiddle" />

        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutuserInput">

            <TextView
                style="@style/textViewTextFrameMiddle"
                android:text="@string/tv_email"/>
            <EditText
                android:id="@+id/et_formulaire_email"
                style="@style/edithTextFrameMiddle" />

        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutuserInput">

            <TextView
                style="@style/textViewTextFrameMiddle"
                android:text="@string/tv_password"/>
            <EditText
                android:id="@+id/et_formulaire_password"
                style="@style/edithTextFrameMiddle" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_formulaire_confirm"
            android:text="@string/btn_confirm_information"
            style="@style/Button2" />

    </LinearLayout>

</FrameLayout>
