<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.formation.appli.bruxellesparcourbd.ui.parcourt.ParcourtFresqueDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
    style="@style/LinearLayoutFrame">

        <TextView
            style="@style/textViewTextFrame"
            android:text="@string/tv_fresque_image"/>
        <ImageView
            android:id="@+id/iv_Parcourt_fresque_det_fresque_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            style="@style/LinearLayoutuserInput">
            <TextView
                android:text="@string/tv_titre_freque"
                style="@style/textViewTextFrameMiddle"/>
            <TextView
                android:id="@+id/tv_Parcourt_fresque_det_fresque_titre"
                style="@style/textViewTextFrameMiddle"/>
        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutuserInput">
            <TextView
                android:text="@string/tv_auteur_fresque"
                style="@style/textViewTextFrameMiddle"/>
            <TextView
                android:id="@+id/tv_Parcourt_fresque_det_fresque_auteur"
                style="@style/textViewTextFrameMiddle"/>
        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutuserInput">
            <TextView
                android:text="@string/tv_annee_fresque"
                style="@style/textViewTextFrameMiddle"/>
            <TextView
                android:id="@+id/tv_Parcourt_fresque_det_fresque_annee"
                style="@style/textViewTextFrameMiddle"/>
        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutuserInput">
            <TextView
                android:text="@string/tv_fresque_longitude"
                style="@style/textViewTextFrameMiddle"/>
            <TextView
                android:id="@+id/tv_Parcourt_fresque_det_fresque_longitude"
                style="@style/textViewTextFrameMiddle"/>
        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutuserInput">
            <TextView
                android:text="@string/tv_fresque_latitude"
                style="@style/textViewTextFrameMiddle"/>
            <TextView
                android:id="@+id/tv_Parcourt_fresque_det_fresque_latitude"
                style="@style/textViewTextFrameMiddle"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_Parcourt_fresque_det_retour"
            android:text="@string/btn_parcourt_retour"
            style="@style/Button2"
            android:layout_marginRight="100dp"/>

    </LinearLayout>
    </ScrollView>

</FrameLayout>
